--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   #phone log
   call_log: ^6.0.0
 
+  #background runApp
+  workmanager: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
